--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -11,32 +11,32 @@ jobs:
       linux_64_build_typedebugchannel_targetsconda-forge_python_debug:
         CONFIG: linux_64_build_typedebugchannel_targetsconda-forge_python_debug
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
         SHORT_CONFIG: linux_64_build_typedebugchannel_tar_hcab9fe8502
       linux_64_build_typereleasechannel_targetsconda-forge_main:
         CONFIG: linux_64_build_typereleasechannel_targetsconda-forge_main
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
         SHORT_CONFIG: linux_64_build_typereleasechannel_t_h0a44af7c38
       linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debug:
         CONFIG: linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debug
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
         SHORT_CONFIG: linux_aarch64_build_typedebugchanne_h4e1127e844
       linux_aarch64_build_typereleasechannel_targetsconda-forge_main:
         CONFIG: linux_aarch64_build_typereleasechannel_targetsconda-forge_main
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
         SHORT_CONFIG: linux_aarch64_build_typereleasechan_hcde066807d
       linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug:
         CONFIG: linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
         SHORT_CONFIG: linux_ppc64le_build_typedebugchanne_he8193b4f7f
       linux_ppc64le_build_typereleasechannel_targetsconda-forge_main:
         CONFIG: linux_ppc64le_build_typereleasechannel_targetsconda-forge_main
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
         SHORT_CONFIG: linux_ppc64le_build_typereleasechan_h12bca821c7
   timeoutInMinutes: 360
   variables: {}
