--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -149,22 +149,22 @@ outputs:
         - llvm-tools-18    # [not win]
         - clang 18.*       # [win]
         - llvm-tools 18.*  # [win]
-        - bzip2         # [build_platform != target_platform]
-        - sqlite        # [build_platform != target_platform]
-        - xz            # [build_platform != target_platform]
-        - zlib          # [build_platform != target_platform]
-        - openssl       # [build_platform != target_platform]
-        - readline      # [not win and build_platform != target_platform]
-        - tk            # [build_platform != target_platform]
-        - ncurses       # [unix and build_platform != target_platform]
-        - libffi        # [build_platform != target_platform]
-        - libuuid       # [linux and build_platform != target_platform]
-        - libxcrypt     # [linux and build_platform != target_platform]
-        - expat         # [build_platform != target_platform]
+        - bzip2          # [build_platform != target_platform]
+        - sqlite         # [build_platform != target_platform]
+        - liblzma-devel  # [build_platform != target_platform]
+        - zlib           # [build_platform != target_platform]
+        - openssl        # [build_platform != target_platform]
+        - readline       # [not win and build_platform != target_platform]
+        - tk             # [build_platform != target_platform]
+        - ncurses        # [unix and build_platform != target_platform]
+        - libffi         # [build_platform != target_platform]
+        - libuuid        # [linux and build_platform != target_platform]
+        - libxcrypt      # [linux and build_platform != target_platform]
+        - expat          # [build_platform != target_platform]
       host:
         - bzip2
         - sqlite
-        - xz
+        - liblzma-devel
         - zlib
         - openssl
         - readline  # [not win]
