MNT: Re-rendered with conda-build 24.11.2, conda-smithy 3.44.9, and conda-forge-pinning 2024.12.05.10.52.57

--- a/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_debug.yaml
+++ b/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_debug.yaml
@@ -26,6 +26,8 @@ expat:
 - '2'
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 ncurses:
@@ -46,8 +48,6 @@ target_platform:
 - osx-64
 tk:
 - '8.6'
-xz:
-- '5'
 zip_keys:
 - - build_type
   - channel_targets
