--- a/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug.yaml
+++ b/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug.yaml
@@ -26,6 +26,8 @@ expat:
 - '2'
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 libuuid:
 - '2'
 ncurses:
@@ -44,8 +46,6 @@ sqlite:
 - '3'
 target_platform:
 - linux-ppc64le
-xz:
-- '5'
 zip_keys:
 - - build_type
   - channel_targets
