--- a/.ci_support/osx_arm64_build_typedebugchannel_targetsconda-forge_python_debug.yaml
+++ b/.ci_support/osx_arm64_build_typedebugchannel_targetsconda-forge_python_debug.yaml
@@ -26,6 +26,8 @@ expat:
 - '2'
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 macos_machine:
 - arm64-apple-darwin20.0.0
 ncurses:
@@ -46,8 +48,6 @@ target_platform:
 - osx-arm64
 tk:
 - '8.6'
-xz:
-- '5'
 zip_keys:
 - - build_type
   - channel_targets
