--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -22,6 +22,8 @@ docker_image:
 - quay.io/condaforge/linux-anvil-x86_64:alma9
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 libuuid:
 - '2'
 ncurses:
@@ -42,8 +44,6 @@ target_platform:
 - linux-aarch64
 tk:
 - '8.6'
-xz:
-- '5'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
