--- a/.ci_support/linux_ppc64le_.yaml
+++ b/.ci_support/linux_ppc64le_.yaml
@@ -22,6 +22,8 @@ docker_image:
 - quay.io/condaforge/linux-anvil-x86_64:alma9
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 libuuid:
 - '2'
 ncurses:
@@ -40,8 +42,6 @@ sqlite:
 - '3'
 target_platform:
 - linux-ppc64le
-xz:
-- '5'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
