--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -22,6 +22,8 @@ cxx_compiler_version:
 - '18'
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 ncurses:
@@ -42,8 +44,6 @@ target_platform:
 - osx-64
 tk:
 - '8.6'
-xz:
-- '5'
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
