--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -12,6 +12,8 @@ cxx_compiler:
 - vs2019
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
 openssl:
 - '3'
 pin_run_as_build:
@@ -26,7 +28,5 @@ target_platform:
 - win-64
 tk:
 - '8.6'
-xz:
-- '5'
 zlib:
 - '1'
