MNT: Re-rendered with conda-build 24.11.2, conda-smithy 3.44.9, and conda-forge-pinning 2024.12.08.12.26.17

--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingyes.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingyes.yaml
@@ -28,6 +28,10 @@ freethreading:
 - 'yes'
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
+libsqlite:
+- '3'
 libuuid:
 - '2'
 ncurses:
@@ -42,8 +46,6 @@ python:
 - '3.13'
 readline:
 - '8'
-sqlite:
-- '3'
 target_platform:
 - linux-64
 tk:
