--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 2 %}
+{% set build_number = 3 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -94,6 +94,10 @@ outputs:
         # These two are just to get the headers needed for tk.h, but is unused
         - xorg-libx11
         - xorg-xorgproto
+        # These modules are compiled against, but are not necessary to run python
+        - tk
+        - readline
+        - libsqlite
       # Disabled until verified to work correctly
       detect_binary_files_with_prefix: true
       # detect_binary_files_with_prefix: False
@@ -150,7 +154,7 @@ outputs:
         - clang 18.*       # [win]
         - llvm-tools 18.*  # [win]
         - bzip2          # [build_platform != target_platform]
-        - sqlite         # [build_platform != target_platform]
+        - libsqlite      # [build_platform != target_platform]
         - liblzma-devel  # [build_platform != target_platform]
         - zlib           # [build_platform != target_platform]
         - openssl        # [build_platform != target_platform]
@@ -163,7 +167,7 @@ outputs:
         - expat          # [build_platform != target_platform]
       host:
         - bzip2
-        - sqlite
+        - libsqlite
         - liblzma-devel
         - zlib
         - openssl
@@ -185,6 +189,10 @@ outputs:
         - _python_rc
 {% endif %}
         - python_abi {{ ver2 }}.* *_{{ abi_tag }}
+      run_constrained:
+        - {{ pin_compatible('tk') }}
+        - {{ pin_compatible('readline') }}
+        - {{ pin_compatible('libsqlite') }}
     test:
       downstreams:
 {% if freethreading == "yes" %}
