--- a/.ci_support/win_64_freethreadingyes.yaml
+++ b/.ci_support/win_64_freethreadingyes.yaml
@@ -18,6 +18,10 @@ freethreading:
 - 'yes'
 libffi:
 - '3.4'
+liblzma_devel:
+- '5'
+libsqlite:
+- '3'
 openssl:
 - '3'
 pin_run_as_build:
@@ -26,8 +30,8 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.13'
-sqlite:
-- '3'
+readline:
+- '8'
 target_platform:
 - win-64
 tk:
