--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 2 %}
+{% set build_number = 3 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -110,6 +110,12 @@ outputs:
       skip_compile_pyc:
         - '*.py'            # [build_platform != target_platform]
       string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_{{ abi_tag }}
+{% if freethreading == "yes" %}
+      python_site_packages_path: lib/python{{ ver2nd }}t/site-packages   # [unix]
+{% else %}
+      python_site_packages_path: lib/python{{ ver2nd }}/site-packages    # [unix]
+{% endif %}
+      python_site_packages_path: Lib/site-packages                       # [win]
       run_exports:
         noarch:
           - python
