--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 3 %}
+{% set build_number = 4 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -34,9 +34,9 @@
 {% if win %}
   {% set site_packages_path = "Lib/site-packages" %}
 {% elif freethreading == "yes" %}
-  {% set site_packages_path = "lib/python" + ver2nd + "t/site-packages" %}
+  {% set site_packages_path = "lib/python" + ver2 + "t/site-packages" %}
 {% else %}
-  {% set site_packages_path = "lib/python" + ver2nd + "/site-packages" %}
+  {% set site_packages_path = "lib/python" + ver2 + "/site-packages" %}
 {% endif %}
 
 package:
