--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,6 +12,8 @@ build_type:
 channel_targets:
   - conda-forge main
   - conda-forge python_debug   # [not win]
+is_python_min:
+  - no
 zip_keys:
   - build_type
   - channel_targets
