--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,19 +1,23 @@
-python:
-  - 3.12
-python_impl:
-  - cpython
-numpy:
-  - 1.16
 MACOSX_SDK_VERSION:            # [osx and x86_64]
   - 11.0                       # [osx and x86_64]
+
+# Override Python `zip_keys`
+python:
+  - 3.12
+numpy:
+  - 1.16
+python_impl:
+  - cpython
+is_python_min:
+  - no
+
+# Configuration for debug and release builds
 build_type:
   - release
   - debug                      # [not win]
 channel_targets:
   - conda-forge main
   - conda-forge python_debug   # [not win]
-is_python_min:
-  - no
 zip_keys:
   - build_type
   - channel_targets
