MNT: Re-rendered with conda-build 25.5.0, conda-smithy 3.50.1, and conda-forge-pinning 2025.06.15.04.38.40

--- a/.ci_support/osx_arm64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingno.yaml
+++ b/.ci_support/osx_arm64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingno.yaml
@@ -30,6 +30,8 @@ libffi:
 - '3.4'
 liblzma_devel:
 - '5'
+libsqlite:
+- '3'
 macos_machine:
 - arm64-apple-darwin20.0.0
 ncurses:
@@ -44,8 +46,6 @@ python:
 - '3.13'
 readline:
 - '8'
-sqlite:
-- '3'
 target_platform:
 - osx-arm64
 tk:
