--- a/.ci_support/win_64_freethreadingyes.yaml
+++ b/.ci_support/win_64_freethreadingyes.yaml
@@ -20,6 +20,8 @@ libffi:
 - '3.4'
 liblzma_devel:
 - '5'
+libsqlite:
+- '3'
 openssl:
 - '3'
 pin_run_as_build:
@@ -28,8 +30,6 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.13'
-sqlite:
-- '3'
 target_platform:
 - win-64
 tk:
