--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,5 +1,8 @@
 MACOSX_SDK_VERSION:            # [osx and x86_64]
   - 11.0                       # [osx and x86_64]
+# Needs pthread_jit_write_protect_np
+c_stdlib_version:              # [osx and x86_64]
+  - 11.0                       # [osx and x86_64]
 
 # Override Python `zip_keys`
 python:
