Skip named aliases for now

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -316,6 +316,8 @@ outputs:
 
   - name: cpython
     build:
+      # FIXME: How to get it working with RCs?
+      skip: true
       noarch: generic
     requirements:
       - python {{ version }}.*
@@ -324,6 +326,8 @@ outputs:
   - name: python-freethreading
     build:
       noarch: generic
+      # FIXME: How to get it working with RCs?
+      skip: true
 {% if freethreading != "yes" %}
       skip: true
 {% endif %}
@@ -334,6 +338,8 @@ outputs:
   - name: python-gil
     build:
       noarch: generic
+      # FIXME: How to get it working with RCs?
+      skip: true
 {% if freethreading == "yes" %}
       skip: true
 {% endif %}
@@ -346,6 +352,8 @@ outputs:
     script: install_jit_activation.bat  # [win]
     build:
       noarch: generic
+      # FIXME: How to get it working with RCs?
+      skip: true
     requirements:
       - cpython {{ version }}.*
       - __unix   # [unix]
