MNT: Re-rendered with conda-build 25.5.0, conda-smithy 3.51.1, and conda-forge-pinning 2025.07.22.15.48.25

--- a/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingno.yaml
+++ b/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingno.yaml
@@ -1,17 +1,27 @@
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
-- vs2022
+- gcc
+c_compiler_version:
+- '14'
 c_stdlib:
-- vs
+- sysroot
+c_stdlib_version:
+- '2.17'
+cdt_name:
+- conda
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_debug
 cxx_compiler:
-- vs2022
+- gxx
+cxx_compiler_version:
+- '14'
+docker_image:
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 expat:
 - '2'
 freethreading:
@@ -22,6 +32,10 @@ liblzma_devel:
 - '5'
 libsqlite:
 - '3'
+libuuid:
+- '2'
+ncurses:
+- '6'
 openssl:
 - '3'
 pin_run_as_build:
@@ -30,13 +44,15 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.14'
+readline:
+- '8'
 target_platform:
-- win-64
-tk:
-- '8.6'
+- linux-ppc64le
 zip_keys:
 - - build_type
   - channel_targets
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1'
 zstd:
