--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_mainfreethreadingyes.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_mainfreethreadingyes.yaml
@@ -3,25 +3,39 @@ build_type:
 bzip2:
 - '1'
 c_compiler:
-- vs2022
+- gcc
+c_compiler_version:
+- '14'
 c_stdlib:
-- vs
+- sysroot
+c_stdlib_version:
+- '2.17'
+cdt_name:
+- conda
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2022
+- gxx
+cxx_compiler_version:
+- '14'
+docker_image:
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 expat:
 - '2'
 freethreading:
-- 'no'
+- 'yes'
 libffi:
 - '3.4'
 liblzma_devel:
 - '5'
 libsqlite:
 - '3'
+libuuid:
+- '2'
+ncurses:
+- '6'
 openssl:
 - '3'
 pin_run_as_build:
@@ -30,13 +44,17 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.14'
+readline:
+- '8'
 target_platform:
-- win-64
+- linux-64
 tk:
 - '8.6'
 zip_keys:
 - - build_type
   - channel_targets
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1'
 zstd:
