--- a/.ci_support/osx_arm64_build_typereleasechannel_targetsconda-forge_mainfreethreadingno.yaml
+++ b/.ci_support/osx_arm64_build_typereleasechannel_targetsconda-forge_mainfreethreadingno.yaml
@@ -1,17 +1,27 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '11.0'
+MACOSX_SDK_VERSION:
+- '11.0'
 build_type:
 - release
 bzip2:
 - '1'
 c_compiler:
-- vs2022
+- clang
+c_compiler_version:
+- '19'
 c_stdlib:
-- vs
+- macosx_deployment_target
+c_stdlib_version:
+- '11.0'
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2022
+- clangxx
+cxx_compiler_version:
+- '19'
 expat:
 - '2'
 freethreading:
@@ -22,6 +32,10 @@ liblzma_devel:
 - '5'
 libsqlite:
 - '3'
+macos_machine:
+- arm64-apple-darwin20.0.0
+ncurses:
+- '6'
 openssl:
 - '3'
 pin_run_as_build:
@@ -30,13 +44,17 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.14'
+readline:
+- '8'
 target_platform:
-- win-64
+- osx-arm64
 tk:
 - '8.6'
 zip_keys:
 - - build_type
   - channel_targets
+- - c_compiler_version
+  - cxx_compiler_version
 zlib:
 - '1'
 zstd:
