--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -76,6 +76,7 @@ source:
       - patches/0023-Brand-conda-forge.patch
 {% endif %}
       - patches/0024-Do-not-define-pid_t-as-it-might-conflict-with-the-ac.patch
+      - patches/0025-Search-LLVM_ROOT-for-llvm-binaries.patch
 
 build:
   number: {{ build_number }}
