For tkinter, but we expect from system

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -208,6 +208,8 @@ outputs:
         - {{ compiler('c') }}
         # Tried to use enable_language(C) to avoid needing this. It does not work.
         - {{ compiler('cxx') }}
+        # For tkinter, but we expect from system
+        - xorg-libx11
       files:
         - tests/distutils/*
         - tests/cmake/*
