Expand OpenSSL version check

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -211,6 +211,9 @@ outputs:
         - ripgrep
         - cmake
         - ninja
+        # Pin to the openssl version used during the build to check whether
+        # we load the conda-forge version.
+        - openssl {{ openssl }}
         - {{ stdlib('c') }}
         - {{ compiler('c') }}
         # Tried to use enable_language(C) to avoid needing this. It does not work.
