Upload to python_dev label

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -30,8 +30,8 @@ build_type:
   - release
   - debug                      # [not win]
 channel_targets:
-  - conda-forge main
-  - conda-forge python_debug   # [not win]
+  - conda-forge python_dev
+  - conda-forge python_dev_debug   # [not win]
 zip_keys:
   - build_type
   - channel_targets
