--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_dev_debugfreethreadingyes.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_dev_debugfreethreadingyes.yaml
@@ -13,7 +13,7 @@ c_stdlib_version:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_dev_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
