--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_devfreethreadingno.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_python_devfreethreadingno.yaml
@@ -1,27 +1,25 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.13'
-MACOSX_SDK_VERSION:
-- '11.0'
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '21'
+- '14'
 c_stdlib:
-- macosx_deployment_target
+- sysroot
 c_stdlib_version:
-- '10.13'
+- '2.17'
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_dev
 cxx_compiler:
-- clangxx
+- gxx
 cxx_compiler_version:
-- '21'
+- '14'
+docker_image:
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 expat:
 - '2'
 freethreading:
@@ -32,8 +30,8 @@ liblzma_devel:
 - '5'
 libsqlite:
 - '3'
-macos_machine:
-- x86_64-apple-darwin13.4.0
+libuuid:
+- '2'
 ncurses:
 - '6'
 openssl:
@@ -47,7 +45,7 @@ python:
 readline:
 - '8'
 target_platform:
-- osx-64
+- linux-64
 tk:
 - '8.6'
 zip_keys:
