--- a/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_python_devfreethreadingyes.yaml
+++ b/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_python_devfreethreadingyes.yaml
@@ -1,9 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
+- '10.13'
 MACOSX_SDK_VERSION:
 - '11.0'
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -13,11 +13,11 @@ c_compiler_version:
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
-- '11.0'
+- '10.13'
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_dev
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -33,7 +33,7 @@ liblzma_devel:
 libsqlite:
 - '3'
 macos_machine:
-- arm64-apple-darwin20.0.0
+- x86_64-apple-darwin13.4.0
 ncurses:
 - '6'
 openssl:
@@ -47,7 +47,7 @@ python:
 readline:
 - '8'
 target_platform:
-- osx-arm64
+- osx-64
 tk:
 - '8.6'
 zip_keys:
