--- a/.ci_support/win_64_freethreadingyes.yaml
+++ b/.ci_support/win_64_freethreadingyes.yaml
@@ -9,7 +9,7 @@ c_stdlib:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_dev
 cxx_compiler:
 - vs2022
 expat:
