Narrow the build down

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -85,6 +85,7 @@ source:
 
 build:
   number: {{ build_number }}
+  skip: true  # [not (linux64 and build_type == "debug")]
 
 requirements:
   build:
