--- a/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_dev_debugfreethreadingno.yaml
+++ b/.ci_support/linux_64_build_typedebugchannel_targetsconda-forge_python_dev_debugfreethreadingno.yaml
@@ -1,5 +1,5 @@
 build_type:
-- release
+- debug
 bzip2:
 - '1'
 c_compiler:
@@ -13,7 +13,7 @@ c_stdlib_version:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge main
+- conda-forge python_dev_debug
 cxx_compiler:
 - gxx
 cxx_compiler_version:
@@ -41,11 +41,13 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.14'
+- '3.15'
 readline:
 - '8'
 target_platform:
-- linux-ppc64le
+- linux-64
+tk:
+- '8.6'
 zip_keys:
 - - build_type
   - channel_targets
