--- a/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_dev_debugfreethreadingno.yaml
+++ b/.ci_support/osx_64_build_typedebugchannel_targetsconda-forge_python_dev_debugfreethreadingno.yaml
@@ -1,5 +1,5 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '11.0'
+- '10.13'
 MACOSX_SDK_VERSION:
 - '11.0'
 build_type:
@@ -9,19 +9,19 @@ bzip2:
 c_compiler:
 - clang
 c_compiler_version:
-- '20.1'
+- '21'
 c_stdlib:
 - macosx_deployment_target
 c_stdlib_version:
-- '11.0'
+- '10.13'
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge python_dev_debug
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '20.1'
+- '21'
 expat:
 - '2'
 freethreading:
@@ -33,7 +33,7 @@ liblzma_devel:
 libsqlite:
 - '3'
 macos_machine:
-- arm64-apple-darwin20.0.0
+- x86_64-apple-darwin13.4.0
 ncurses:
 - '6'
 openssl:
@@ -43,11 +43,11 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.14'
+- '3.15'
 readline:
 - '8'
 target_platform:
-- osx-arm64
+- osx-64
 tk:
 - '8.6'
 zip_keys:
